--- a/app/templates/partials/topbar.html
+++ b/app/templates/partials/topbar.html
@@ -7,7 +7,7 @@
                 {% if config_loja_telefone %}
                 <i class="fab fa-whatsapp mx-2"></i>
                 <a class="navbar-sm-brand text-light text-decoration-none"
-                   href="https://wa.me/{{ config_loja_telefone|replace(' ', '')|replace('-', '') }}"
+                   href="https://wa.me/{{ config_loja_telefone|clean_phone }}"
                    target="_blank">
                     {{ config_loja_telefone }}
                 </a>
