--- a/app/templates/admin/conteudo_editar.html
+++ b/app/templates/admin/conteudo_editar.html
@@ -94,6 +94,11 @@
                 </a>
             </li>
             <li>
+                <a href="{{ url_for('admin.cupons') }}">
+                    <i class="fas fa-ticket-alt"></i> Cupons
+                </a>
+            </li>
+            <li>
                 <a href="{{ url_for('admin.media_biblioteca') }}">
                     <i class="fas fa-images"></i> Biblioteca de Mídia
                 </a>
